--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,8 +23,7 @@
     "prettier"
   ],
   "extends": [
-    "eslint-config-prettier",
-    "prettier/react"
+    "prettier"
   ],
   "rules": {
     "react/no-danger": "off",
@@ -76,8 +75,7 @@
         "@typescript-eslint/eslint-plugin"
       ],
       "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "eslint-config-prettier/@typescript-eslint"
+        "plugin:@typescript-eslint/recommended"
       ],
       "rules": {
         "@typescript-eslint/explicit-function-return-type": "off",
