--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/styled-components": "^5.1.20",
+    "axios": "^0.26.0",
     "miragejs": "^0.1.43",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,8 +35,10 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4"
   },
   "scripts": {
